
NEW ARGUMENTS

* qmplot now accepts maptype.
* several functions now have a force argument that demands re-downloading of maps.

FIXES

* fixed a bug in stamen cloudmade maps that resulted in a very (very) small miscalculation in the bottom right bounding box of each tile.


ggmap 2.3
-------------------------------------------------------------------------

CHANGES

* now imports mapproj.
* theme_nothing now accepts argument legend to prevent legend wiping.
* ggmap and qmplot can now properly display legends in the map again, but transparency in the legend has been removed. (this will likely return if/when ggplot2 allows an alpha argument to element_rect).
* dataset crime now has variable offense as a factor, month and day as ordered factors.
* several functions now message the user with the URL queried as well as the Google Maps Terms of Service URL to better agree with Google's License Restrictions.
* gglocator now works properly.


DOCUMENTATION CHANGES

* documentation for get_map states that whole-world zooms are not supported. (thanks to suggestion by john hendy.)



ggmap 2.2
-------------------------------------------------------------------------

This version brings ggmap up to date with ggplot2 0.9.2.

CHANGES

* geocode now returns the query as well with the option output = "more".  this allows for easier merging with original datasets.  (thanks to suggestion by garrett grolemund.)
* geocode, mapdist, route and revgeocode now no longer close all connections. consequently, ggmap now works with knitr. (thanks to fix by yihui xie.)





ggmap 2.1
-------------------------------------------------------------------------

NEW FEATURES

* get_map now allows for bounding box specifications with source = 'google'.
* new argument darken added to ggmap which allows the user to put a shaded layer on top of maps.  this makes seeing color overlays easier.
* darken, mapcolor arguments added to qmplot.

CHANGES
