@@ -12,21 +12,22 @@
 #'
 #' 
 #' \dontrun{
-#' qmap(location = 'baylor university')
-#' qmap(location = 'baylor university', zoom = 14)
-#' qmap(location = 'baylor university', zoom = 14, source = 'osm')
-#' qmap(location = 'baylor university', zoom = 14, source = 'osm', scale = 20000)
-#' qmap(location = 'baylor university', zoom = 14, maptype = 'satellite')
-#' qmap(location = 'baylor university', zoom = 14, maptype = 'hybrid')
-#' qmap(location = 'baylor university', zoom = 14, maptype = 'toner', source = 'stamen')
-#' qmap(location = 'baylor university', zoom = 14, maptype = 'watercolor', source = 'stamen')
+#' qmap(location = "baylor university")
+#' qmap(location = "baylor university", zoom = 14)
+#' qmap(location = "baylor university", zoom = 14, source = "osm")
+#' qmap(location = "baylor university", zoom = 14, source = "osm", scale = 20000)
+#' qmap(location = "baylor university", zoom = 14, maptype = "satellite")
+#' qmap(location = "baylor university", zoom = 14, maptype = "hybrid")
+#' qmap(location = "baylor university", zoom = 14, maptype = "toner", source = "stamen")
+#' qmap(location = "baylor university", zoom = 14, maptype = "watercolor", source = "stamen")
+#' qmap(location = "baylor university", zoom = 14, maptype = "terrain-background", source = "stamen")
 #' 
-#' api_key <- '<your api key here>'
-#' qmap(location = 'baylor university', zoom = 14, maptype = 15434, 
-#'   source = 'cloudmade', api_key = api_key)
+#' api_key <- "<your api key here>"
+#' qmap(location = "baylor university", zoom = 14, maptype = 15434, 
+#'   source = "cloudmade", api_key = api_key)
 #' 
-#' wh <- geocode('the white house')
-#' qmap('the white house', maprange = TRUE,
+#' wh <- geocode("the white house")
+#' qmap("the white house", maprange = TRUE,
 #'   base_layer = ggplot(aes(x=lon, y=lat), data = wh)) +
 #'   geom_point()
 #' 
@@ -34,24 +35,24 @@
 #' 
 #' }
 #' 
-qmap <- function(location = 'houston', ...){
+qmap <- function(location = "houston", ...){
 	
   # location formatting
   location_stop <- TRUE
   if(is.character(location) && length(location) == 1){
-    location_type <- 'address'
+    location_type <- "address"
     location_stop <- FALSE    
   }
   if(is.numeric(location) && length(location) == 2){
-    location_type <- 'lonlat'
+    location_type <- "lonlat"
     location_stop <- FALSE      	
   }
   if(is.numeric(location) && length(location) == 4){
-    location_type <- 'bbox'
+    location_type <- "bbox"
     location_stop <- FALSE      	
   }  
   if(location_stop){
-    stop('improper location specification, see ?get_map.', call. = F)
+    stop("improper location specification, see ?get_map.", call. = F)
   }	
 	
   args <- as.list(match.call(expand.dots = TRUE)[-1])	
@@ -59,85 +60,85 @@ qmap <- function(location = 'houston', ...){
   # get_map args
   ##################  
   
-  if('zoom' %in% names(args)){
+  if("zoom" %in% names(args)){
     zoom <- eval(args$zoom)
   } else {
   	zoom <- 10
   }  
   
-  if('scale' %in% names(args)){
+  if("scale" %in% names(args)){
     scale <- eval(args$scale)
   } else {
-  	scale <- 'auto'
+  	scale <- "auto"
   }    
   
-  if('messaging' %in% names(args)){
+  if("messaging" %in% names(args)){
     messaging <- eval(args$messaging)
   } else {
     messaging <- FALSE
   }       
   
-  if('urlonly' %in% names(args)){
+  if("urlonly" %in% names(args)){
     urlonly <- eval(args$urlonly)
   } else {
     urlonly <- FALSE
   }    
   
-  if('filename' %in% names(args)){
+  if("filename" %in% names(args)){
     filename <- eval(args$filename)
   } else {
-    filename <- 'ggmapTemp'
+    filename <- "ggmapTemp"
   }    
   
-  if('color' %in% names(args)){
+  if("color" %in% names(args)){
     color <- eval(args$color)
   } else {
-    color <- 'color'
+    color <- "color"
   }                   
   
-  if('source' %in% names(args)){
+  if("source" %in% names(args)){
     source <- eval(args$source)
   } else {
-    source <- 'google'
+    source <- "google"
   }        
   
-  if('maptype' %in% names(args)){
+  if("maptype" %in% names(args)){
     maptype <- eval(args$maptype)
   } else {
-  	if(source != 'cloudmade'){
-      maptype <- 'terrain'
+  	if(source != "cloudmade"){
+      maptype <- "terrain"
     } else {
       maptype <- 1	
     }
   }    
   
-  if('crop' %in% names(args)){
+  if("crop" %in% names(args)){
     crop <- eval(args$crop)
   } else {
     crop <- TRUE
   }          
   
-  if('api_key' %in% names(args)){
+  if("api_key" %in% names(args)){
     api_key <- eval(args$api_key)
   } else {
-    if(source == 'cloudmade'){
-      stop('an api key must be specified for cloudmade maps, see ?get_cloudmademap.',
+    if(source == "cloudmade"){
+      stop("an api key must be specified for cloudmade maps, see ?get_cloudmademap.",
       call. = F)
     }
     api_key <- NULL
   }            
   
   # deprecated
-  if(all(c('lonR','latR') %in% names(args))){ 
-  	message('lonR and latR arguments deprecated, pass bounding box to location.')  	
-  	message('see ?get_openstreetmap.')
+  if(all(c("lonR","latR") %in% names(args))){ 
+  	message("lonR and latR arguments deprecated, pass bounding box to location.")  	
+  	message("see ?get_openstreetmap.")
     lonR <- eval(args$lonR)
     latR <- eval(args$latR)
     location <- c(left = lonR[1], bottom = latR[1], right = lonR[2], top = latR[2])
   }  
   
-  if('type' %in% names(args)){
-  	message('type argument deprecated, use color.')
+  if("type" %in% names(args)){
+  	message("type argument deprecated, use color.")
     color <- eval(args$type)
   }
   
@@ -145,58 +146,64 @@ qmap <- function(location = 'houston', ...){
   # ggmap args
   ##################
   
-  if('extent' %in% names(args)){
+  if("extent" %in% names(args)){
     extent <- eval(args$extent)
   } else {
-  	extent <- 'device'
+  	extent <- "device"
   }  
   
-  if('maprange' %in% names(args)){
+  if("maprange" %in% names(args)){
     maprange <- eval(args$maprange)
   } else {
     maprange <- FALSE
   }         
   
-  if('base_layer' %in% names(args)){
+  if("base_layer" %in% names(args)){
     base_layer <- args$base_layer
   } else {
-    base_layer <- 'auto'
+    base_layer <- "auto"
   }              
   
-  if('legend' %in% names(args)){
+  if("legend" %in% names(args)){
     legend <- args$legend
   } else {
-    legend <- 'right'
+    legend <- "right"
   }     
   
-  if('padding' %in% names(args)){
+  if("padding" %in% names(args)){
     padding <- args$padding
   } else {
     padding <- .02
   }      
   
-  if('darken' %in% names(args)){
+  if("darken" %in% names(args)){
     darken <- eval(args$darken)
   } else {
-    darken <- c(0, 'black')
+    darken <- c(0, "black")
   }  
+  
+  if("language" %in% names(args)){
+    language <- eval(args$language)
+  } else {
+  	language <- "en-EN"
+  }    
   
   # deprecated      
   
-  if('b' %in% names(args)){
-    .Deprecated(msg = 'b argument deperecated, use padding.')
+  if("b" %in% names(args)){
+    .Deprecated(msg = "b argument deperecated, use padding.")
     padding <- args$b
   } else {
     padding <- .02
   }  
   
-  if('fullpage' %in% names(args) || 'expand' %in% names(args)){
-    .Deprecated(msg = 'fullpage and expand syntaxes deprecated, use extent.')
-    if('fullpage' %in% names(args)){fullpage <- eval(args$fullpage)}else{fullpage <- FALSE}
-    if(fullpage) extent <- 'device'
-    if('expand' %in% names(args)){expand <- eval(args$expand)}else{expand <- FALSE}
-    if(fullpage == FALSE && expand == TRUE) extent <- 'panel'
-    if(fullpage == FALSE && expand == FALSE) extent <- 'normal'
+  if("fullpage" %in% names(args) || "expand" %in% names(args)){
+    .Deprecated(msg = "fullpage and expand syntaxes deprecated, use extent.")
+    if("fullpage" %in% names(args)){fullpage <- eval(args$fullpage)}else{fullpage <- FALSE}
+    if(fullpage) extent <- "device"
+    if("expand" %in% names(args)){expand <- eval(args$expand)}else{expand <- FALSE}
+    if(fullpage == FALSE && expand == TRUE) extent <- "panel"
+    if(fullpage == FALSE && expand == FALSE) extent <- "normal"
   }          
   
 
@@ -205,7 +212,7 @@ qmap <- function(location = 'houston', ...){
   # return
   ggmap(
     get_map(location = location, zoom = zoom, scale = scale, source = source, 
-      color = color, maptype = maptype, api_key = api_key), 
+      color = color, maptype = maptype, language = language, api_key = api_key), 
     maprange = maprange, extent = extent, base_layer = base_layer, legend = legend, 
       padding = padding, darken = darken
   )     
